[gd_scene load_steps=9 format=3 uid="uid://d0huka0y2odr1"]

[ext_resource type="Script" path="res://scripts/moon_dialogue.gd" id="1_2eb4a"]
[ext_resource type="Texture2D" uid="uid://cyjmkc6o5xbir" path="res://sprites/laLoons_flying1.png" id="1_en5eh"]
[ext_resource type="Texture2D" uid="uid://dy5jksp3i1at0" path="res://sprites/laLoons_moon3.png" id="2_1jg1u"]
[ext_resource type="Script" path="res://addons/inkgd/ink_player.gd" id="2_18txx"]
[ext_resource type="Resource" uid="uid://brppfm3vn3cgy" path="res://dialogue/moon_dialogue.ink.json" id="3_jlm4b"]
[ext_resource type="Script" path="res://scripts/moon_choice_button.gd" id="6_uv1tt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_en5x6"]
texture = ExtResource("1_en5eh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fw2h6"]
bg_color = Color(0.607843, 0.529412, 0.380392, 0.588235)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="MoonDialogue" type="Node2D"]
script = ExtResource("1_2eb4a")

[node name="InkPlayer" type="Node" parent="."]
script = ExtResource("2_18txx")
ink_file = ExtResource("3_jlm4b")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_en5x6")

[node name="Moon" type="Sprite2D" parent="Control"]
position = Vector2(411, 241)
scale = Vector2(3.85, 3.85)
texture = ExtResource("2_1jg1u")

[node name="HSplitContainer" type="VSplitContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 400

[node name="Control" type="Control" parent="Control/HSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/HSplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="VSplitContainer" type="HSplitContainer" parent="Control/HSplitContainer/MarginContainer"]
layout_mode = 2
split_offset = 925

[node name="MoonSpeech" type="RichTextLabel" parent="Control/HSplitContainer/MarginContainer/VSplitContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_fw2h6")

[node name="Choices" type="VBoxContainer" parent="Control/HSplitContainer/MarginContainer/VSplitContainer"]
layout_mode = 2

[node name="ChoiceButton" type="Button" parent="Control/HSplitContainer/MarginContainer/VSplitContainer/Choices"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Continue"
script = ExtResource("6_uv1tt")

[connection signal="pressed" from="Control/HSplitContainer/MarginContainer/VSplitContainer/Choices/ChoiceButton" to="Control/HSplitContainer/MarginContainer/VSplitContainer/Choices/ChoiceButton" method="_on_pressed"]
